Ep5 - Done - Uploading Images
Added functionality to upload images and store them with the user’s
other data in the Firebase database.

--- a/gameofchats/Info.plist
+++ b/gameofchats/Info.plist
@@ -39,5 +39,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>$(PRODUCT_NAME) uses photos</string>
+    
 </dict>
 </plist>
